--- a/ClickPatternReplicator/ClickPatternReplicator.vcxproj.filters
+++ b/ClickPatternReplicator/ClickPatternReplicator.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="RecordPattern.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SaveLoad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RecordPattern.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SaveLoad.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
